# eparser

./: Cargo.toml  LICENSE  README.md
example/: Cargo.toml
example/src/: main.rs
src/: book.rs  lib.rs  main.rs  oebps.rs  property.rs  url.rs  utils.rs  xhtml.rs
src/file/: local.rs  mod.rs  remote.rs  remote_epub.rs
src/package/: manifest.rs  media_type.rs  metadata.rs  mod.rs  nav.rs  parser.rs  prefix.rs  property.rs  spine.rs
src/test2/: Cargo.toml
src/test2/src/: main.rs
