[package]
name = "eparser"
version = "0.0.0"
edition = "2021"
description = "A simple parser for the EPUB"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.5.2"
once_cell = "1.19.0"
chrono = "0.4.38"
zip = "2.1.6"
minidom = "0.16.0"
thiserror = "1.0.63"
