[package]
name = "eparser"
version = "0.0.0"
edition = "2021"
description = "A simple parser for the EPUB"
license = "MIT"

[dependencies]
url = "2.5.2"
once_cell = "1.19.0"
chrono = "0.4.38"
minidom = "0.16.0"
thiserror = "1.0.63"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zip = "2.1.6"
reqwest = "0.12.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest-wasm = "0.11.16"